# sysaidmin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  sysaidmin
.github/workflows/: code-review.yml  pre-commit.yml
misc/: demo.tape
sysaidmin/: cli.py
