[tool.poetry]
name = "sysaidmin"
version = "0.2.2"
description = "A GPT-powered sysadmin."
authors = ["Stavros Korokithakis <hi@stavros.io>"]
repository = "https://github.com/skorokithakis/sysaidmin/"
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
sysaidmin = "sysaidmin.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8.1"
openai = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
