[project]
name = "sysaidmin"
version = "0.2.5"
description = "An LLM-powered sysadmin."
authors = [{ name = "Stavros Korokithakis", email = "hi@stavros.io" }]
requires-python = ">=3.9"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "openai-agents>=0.0.11",
]

[project.urls]
repository = "https://github.com/skorokithakis/sysaidmin/"

[project.scripts]
sysaidmin = "sysaidmin.cli:cli"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
